# modern_architecture_agent_ai

./: .gitignore  README.md  README_S16.md  app.py  main.py  pyproject.toml  test_agent_isolation.py  test_all_agents.py  test_flow_comprehensive.py  test_path_fix.py  test_planner_acid.py  test_run.py  test_run_investments.py  transcript.md
action/sandbox_state/: 68628473.json
agents/: base_agent.py
config/: agent_config.yaml  mcp_server_config.yaml  models.json  profiles.yaml
core/: json_parser.py  loop.py  model_manager.py  utils.py
mcp_servers/: models.py  multi_mcp.py  server_browser.py  server_rag.py  server_sandbox.py
mcp_servers/documents/: conversation_history.txt  cricket.txt  economic.md
mcp_servers/documents/conversation_history/: memory_summaries_2025-05-08.json  memory_summaries_2025-05-10.json  memory_summaries_2025-05-12.json  (+4 more)
mcp_servers/faiss_index/: doc_index_cache.json  metadata.json  triplet_output.json  truplet_chunker.py
mcp_servers/tools/: switch_search_method.py  web_tools_async.py
memory/: context.py  mem0_store.py
memory/debug_logs/: 111113_PlannerAgent_prompt.txt  111113_PlannerAgent_response.txt  111116_CoderAgent_prompt.txt  111116_CoderAgent_response.txt  111123_CoderAgent_prompt.txt  111123_CoderAgent_response.txt  111137_FormatterAgent_prompt.txt  111137_FormatterAgent_response.txt  latest_prompt.txt
prompts/: browser.md  clarification.md  coder.md  decision.md  distiller.md  formatter.md  planner.md  qa.md  retriever.md  summarizer.md  thinker.md
tools/: sandbox.py
ui/: visualizer.py
(+1 files in other folders)
